[package]
name = "hyper-http-connector"
version = "0.1.0"
authors = ["Darren Tsung <darren@onesignal.com>"]

[dependencies]
hyper = "0.12"
futures = "0.1.21"
futures-cpupool = "0.1.6"
tokio-core = "0.1.11"
log = "0.4"
tokio-tcp = "0.1"
tokio-reactor = "0.1"
trust-dns-resolver = "0.9"
http = "0.1.5"
tokio = "0.1"
net2 = "0.2.32"
lazy_static = "1.0"
